--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Travel Journal</title>
 </head>
 <body>
-    
+    <div id="root">Not Rendered</div>
+
+    <script type="module" src="index.js"></script>
 </body>
 </html>
